[project]
name = "mcp-sdk"
version = "0.1.0"
description = "Python SDK for MCP server"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx", "pydantic"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp_sdk"]
